--- a/index.html
+++ b/index.html
@@ -4,154 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ty-E - Espace de cours</title>
-  <style>
-    :root{
-      --bg:#121212;
-      --card:#1e1e1e;
-      --accent:#0f62fe;
-      --text:#e5e5e5;
-      --muted:#a0a0a0;
-    }
-
-    body{
-      font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
-    }
-
-    header{
-      background: #1b1b1b;
-      padding:32px 20px 18px;
-    }
-
-    .container{
-      max-width:1100px;
-      margin:18px auto;
-      padding:0 20px;
-    }
-
-    h1{
-      font-size:40px;
-      margin:0;
-    }
-
-    .subtitle{
-      margin-top:6px;
-    }
-
-    .card{
-      background:var(--card);
-      border-radius:12px;
-      box-shadow:0 6px 18px rgba(0,0,0,0.6);
-      padding:14px;
-      margin-top:16px;
-    }
-
-    .project{
-      margin-bottom:20px;
-      padding:12px;
-      border:1px solid #2a2a2a;
-      border-radius:10px;
-      background:#2a2a2a;
-    }
-
-    .project h3{
-      margin:0 0 6px 0;
-    }
-
-    .project a {
-      display: inline-block;
-      margin-bottom: 8px;
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    .project a:hover{
-      text-decoration: underline;
-    }
-
-    pre {
-      background: #1e1e1e;
-      color: #d4d4d4;
-      padding: 12px;
-      border-radius: 8px;
-      overflow: auto;
-      white-space: pre-wrap;
-      font-family: "Fira Code", monospace;
-      font-size: 14px;
-      line-height: 1.5;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-    }
-
-    pre .keyword { color: #569cd6; font-weight: bold; }
-    pre .function { color: #dcdcaa; }
-    pre .comment { color: #6a9955; font-style: italic; }
-    pre .number { color: #b5cea8; }
-
-    .multicolor {
-      background: linear-gradient(270deg, #ff3cac, #784ba0, #2b86c5, #20bf55, #f9c846, #ff3cac);
-      background-size: 1200% 1200%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbow 8s ease infinite;
-    }
-
-    @keyframes rainbow {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    button{
-      margin-top:6px;
-      padding:6px 12px;
-      border:none;
-      border-radius:6px;
-      background:var(--accent);
-      color:white;
-      cursor:pointer;
-      transition: background 0.2s, transform 0.1s;
-    }
-
-    button:hover{
-      background:#095ad1;
-      transform: translateY(-1px);
-    }
-
-    #scrollTopBtn {
-      display: none;
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      z-index: 100;
-      padding: 10px 14px;
-      font-size: 18px;
-      border: none;
-      border-radius: 50%;
-      background: var(--accent);
-      color: white;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: background 0.3s, transform 0.1s;
-    }
-
-    #scrollTopBtn:hover {
-      background: #095ad1;
-      transform: translateY(-2px);
-    }
-
-    #searchBox{
-      width:100%;
-      padding:10px;
-      margin-top:10px;
-      border-radius:8px;
-      border:1px solid #333;
-      background:#1e1e1e;
-      color:white;
-      font-size:16px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -162,156 +15,17 @@
   </div>
 </header>
 <main class="container">
-  <section class="card"><h2 class="multicolor">Projets — Melec</h2><div id="melec-list"></div></section>
-  <section class="card"><h2 class="multicolor">Projets — Ciel</h2><div id="ciel-list"></div></section>
+  <section class="card">
+    <h2 class="multicolor">Projets — Melec</h2>
+    <div id="melec-list"></div>
+  </section>
+  <section class="card">
+    <h2 class="multicolor">Projets — Ciel</h2>
+    <div id="ciel-list"></div>
+  </section>
 </main>
 <footer>Site local — pas de serveur. Enregistre ton HTML et ouvre-le dans ton navigateur.</footer>
 <button id="scrollTopBtn" title="Remonter en haut">⬆️</button>
-<script>
-const projetsParFiliere={
-  melec:[
-    {titre:"Circuit simple Melec", lien:"https://www.tinkercad.com", code:`// Code exemple Melec
-void setup() {}
-void loop() {}`}
-  ],
-  ciel:[
-    {titre:"Feux tricolore", lien:"https://www.tinkercad.com/things/3xvFANLNDCH-amazing-hango-albar", code:`// Feux Tricolore Arduino
-int ledRouge = 10;
-int ledOrange = 9;
-int ledVerte = 8;
-
-void setup() {
-  pinMode(ledRouge, OUTPUT);
-  pinMode(ledOrange, OUTPUT);
-  pinMode(ledVerte, OUTPUT);
-}
-
-void loop() {
-  digitalWrite(ledRouge, HIGH);
-  delay(3000);
-  digitalWrite(ledRouge, LOW);
-  digitalWrite(ledOrange, HIGH);
-  delay(1000);
-  digitalWrite(ledOrange, LOW);
-  digitalWrite(ledVerte, HIGH);
-  delay(3000);
-  digitalWrite(ledVerte, LOW);
-}`},
-    {titre:"Allumage LED", lien:"https://www.tinkercad.com/things/1UpGT1sjzcR-allumage-led", code:`const int led = 13;
-
-void setup() {
-  pinMode(led, OUTPUT);
-}
-
-void loop() {
-  digitalWrite(led, HIGH);
-  delay(500);
-  digitalWrite(led, LOW);
-  delay(500);
-}`},
-    {titre:"Capteur Ultrason", lien:"https://www.tinkercad.com/things/elsRRyCBrV7-neat-crift-sango", code:`const int TRIGGER_PIN = 2;
-const int ECHO_PIN = 3;
-const float SOUND_SPEED = 0.343;
-const unsigned long MEASURE_TIMEOUT = 25000;
-
-void setup() {
-  Serial.begin(9600);
-  pinMode(TRIGGER_PIN, OUTPUT);
-  pinMode(ECHO_PIN, INPUT);
-  digitalWrite(TRIGGER_PIN, LOW);
-}
-
-void loop() {
-  digitalWrite(TRIGGER_PIN, HIGH);
-  delayMicroseconds(10);
-  digitalWrite(TRIGGER_PIN, LOW);
-  long measure = pulseIn(ECHO_PIN, HIGH, MEASURE_TIMEOUT);
-  float distance_mm = measure * 0.5 * SOUND_SPEED;
-  Serial.print("Distance : ");
-  Serial.print(distance_mm);
-  Serial.print(" mm (");
-  Serial.print(distance_mm / 10.0);
-  Serial.print(" cm, ");
-  Serial.print(distance_mm / 1000.0);
-  Serial.println(" m)");
-  delay(200);
-}`},
-    {titre:"Bouton + Buzzer", lien:"https://www.tinkercad.com/things/dkqLm6Srjgs-funky-curcan", code:`int bouton = 8;
-int buzzer = 7;
-
-void setup() {
-  pinMode(bouton, INPUT);
-  pinMode(buzzer, OUTPUT);
-}
-
-void loop() {
-  if(digitalRead(bouton) == HIGH) {
-    tone(buzzer, 1000);
-  } else {
-    noTone(buzzer);
-  }
-}`}
-  ]
-};
-
-function highlightCode(code){
-  const comments = /(\/\/.*)/g;
-  const keywords = /\b(void|int|float|const|long|pinMode|digitalWrite|delay|Serial|tone|noTone|INPUT|OUTPUT|HIGH|LOW)\b/g;
-  const functions = /\b(setup|loop|pulseIn|begin)\b/g;
-  const numbers = /\b\d+(\.\d+)?\b/g;
-  return code.replace(comments,'<span class="comment">$1</span>').replace(keywords,'<span class="keyword">$1</span>').replace(functions,'<span class="function">$1</span>').replace(numbers,'<span class="number">$&</span>');
-}
-
-function renderProjects(filiere){
-  const container=document.getElementById(filiere+"-list");
-  container.innerHTML="";
-
-  projetsParFiliere[filiere].forEach(p=>{
-    const box=document.createElement("div"); box.className="project";
-    const title=document.createElement("h3"); title.textContent=p.titre; title.classList.add("multicolor");
-    const link=document.createElement("a"); link.href=p.lien; link.target="_blank"; link.textContent="🔗 Ouvrir le montage";
-
-    const btn=document.createElement("button"); btn.textContent="Afficher le code";
-    const copy=document.createElement("button"); copy.textContent="📋 Copier"; copy.style.display='none';
-
-    const pre=document.createElement("pre"); pre.style.display="none"; pre.innerHTML=highlightCode(p.code);
-
-    btn.onclick=()=>{
-      const show=pre.style.display==="none";
-      pre.style.display=show?"block":"none";
-      copy.style.display=show?"inline-block":"none";
-      btn.textContent=show?"Masquer le code":"Afficher le code";
-    };
-
-    copy.onclick=()=>{
-      navigator.clipboard.writeText(p.code);
-      copy.textContent="✔ Copié";
-      setTimeout(()=>copy.textContent="📋 Copier",1200);
-    };
-
-    const buttonRow=document.createElement('div');
-    buttonRow.style.display='flex'; buttonRow.style.gap='10px';
-    buttonRow.append(btn, copy);
-
-    box.append(title, link, buttonRow, pre);
-    container.appendChild(box);
-  });
-}
-
-renderProjects("melec");
-renderProjects("ciel");
-
-document.getElementById("searchBox").addEventListener("input", e=>{
-  const term=e.target.value.toLowerCase();
-  document.querySelectorAll(".project").forEach(p=>{
-    const t=p.querySelector("h3").textContent.toLowerCase();
-    p.style.display=t.includes(term)?"block":"none";
-  });
-});
-
-const scrollBtn=document.getElementById("scrollTopBtn");
-window.onscroll=()=>{scrollBtn.style.display=(document.body.scrollTop>100 || document.documentElement.scrollTop>100)?"block":"none";};
-scrollBtn.addEventListener("click",()=>{window.scrollTo({top:0,behavior:"smooth"});});
-</script>
+<script src="script.js"></script>
 </body>
 </html>
