Refactor sections for Melec and Ciel in index.html

--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
   </div>
 </header>
 <main class="container">
-  <section class="card">
-    <h2 class="multicolor">Projets — Melec</h2>
-    <div id="melec-list"></div>
-  </section>
-  <section class="card">
-    <h2 class="multicolor">Projets — Ciel</h2>
-    <div id="ciel-list"></div>
-  </section>
+  <section class="card"><h2 class="multicolor">Projets — Melec</h2><div id="melec-list"></div></section>
+  <section class="card"><h2 class="multicolor">Projets — Ciel</h2><div id="ciel-list"></div></section>
 </main>
 <footer>Site local — pas de serveur. Enregistre ton HTML et ouvre-le dans ton navigateur.</footer>
 <button id="scrollTopBtn" title="Remonter en haut">⬆️</button>
