--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ty-E - Espace de cours</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header>
-  <div class="container">
-    <h1 class="multicolor">Ty-E</h1>
-    <div class="subtitle multicolor">Espace pour organiser les cours</div>
-    <input id="searchBox" placeholder="🔎 Rechercher un projet...">
-  </div>
-</header>
-<main class="container">
-  <section class="card"><h2 class="multicolor">Projets — Melec</h2><div id="melec-list"></div></section>
-  <section class="card"><h2 class="multicolor">Projets — Ciel</h2><div id="ciel-list"></div></section>
-</main>
-<footer>Site local — pas de serveur. Enregistre ton HTML et ouvre-le dans ton navigateur.</footer>
-<button id="scrollTopBtn" title="Remonter en haut">⬆️</button>
-<script src="script.js"></script>
+  <header>
+    <div class="container">
+      <h1 class="multicolor">Ty-E</h1>
+      <div class="subtitle multicolor">Espace pour organiser les cours</div>
+      <input id="searchBox" placeholder="🔎 Rechercher un projet...">
+    </div>
+  </header>
+  <main class="container">
+    <section class="card">
+      <h2 class="multicolor">Projets — Melec</h2>
+      <div id="melec-list"></div>
+    </section>
+    <section class="card">
+      <h2 class="multicolor">Projets — Ciel</h2>
+      <div id="ciel-list"></div>
+    </section>
+  </main>
+  <footer>Site local — pas de serveur. Enregistre ton HTML et ouvre-le dans ton navigateur.</footer>
+  <button id="scrollTopBtn" title="Remonter en haut">⬆️</button>
+  <script src="script.js"></script>
 </body>
+
 </html>
