--- a/index.html
+++ b/index.html
@@ -16,17 +16,30 @@
       <input id="searchBox" placeholder="🔎 Rechercher un projet...">
     </div>
   </header>
+
   <main class="container">
     <section class="card">
       <h2 class="multicolor">Projets — Melec</h2>
       <div id="melec-list"></div>
     </section>
+
     <section class="card">
       <h2 class="multicolor">Projets — Ciel</h2>
       <div id="ciel-list"></div>
     </section>
   </main>
-  <footer>Site local — pas de serveur. Enregistre ton HTML et ouvre-le dans ton navigateur.</footer>
+
+  <!-- Footer propre -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 — Ty-E • Espace de cours</p>
+      <p>Développé par <strong>Ty-E / ShrekPrimeXD</strong></p>
+      <p>
+        <a href="https://github.com/" target="_blank">🔗 Code source / Dépôt</a>
+      </p>
+    </div>
+  </footer>
+
   <button id="scrollTopBtn" title="Remonter en haut">⬆️</button>
   <script src="script.js"></script>
 </body>
