--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ty-E - Espace de cours</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Icône onglet (favicon) -->
+  <link rel="icon" type="image/png" href="images/icon-32.png">
+
+  <!-- Icône écran d'accueil iPhone/Android -->
+  <link rel="apple-touch-icon" href="images/icon-192.png">
+
+  <!-- Manifest PWA -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Couleur de l'application (Android) -->
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
