--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="subtitle multicolor">Espace pour organiser les cours</div>
         <input id="searchBox" placeholder="🔎 Rechercher un projet...">
       </div>
+      <button id="adminBtn" class="admin-btn">🔒 Admin</button>
     </div>
   </header>
 
