Update theme color and remove multicolor classes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- Couleur de l'application (Android) -->
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#00569e">
 </head>
 
 <body>
@@ -28,22 +28,21 @@
     <div class="top-bar">
       <img src="images/LogoTy-E.png" alt="Logo Ty-E" class="logo">
       <div class="top-text-search">
-        <div class="subtitle multicolor">Espace pour organiser les cours</div>
+        <div class="subtitle">Espace pour organiser les cours</div>
         <input id="searchBox" placeholder="🔎 Rechercher un projet...">
       </div>
-      <button id="adminBtn" class="admin-btn">🔒 Admin</button>
     </div>
   </header>
 
   <main class="container">
 
     <section class="card">
-      <h2 class="multicolor">Projets — Melec</h2>
+      <h2>Projets — Melec</h2>
       <div id="melec-list"></div>
     </section>
 
     <section class="card">
-      <h2 class="multicolor">Projets — Ciel</h2>
+      <h2>Projets — Ciel</h2>
       <div id="ciel-list"></div>
     </section>
 
@@ -57,7 +56,7 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container">
-      <p>© 2025 — Ty-E • Espace de cours</p>
+      <p>© 2026 — Ty-E • Espace de cours</p>
       <p>Développé par <strong>Ty-E</strong></p>
     </div>
   </footer>
